fix spacing/padding/margins on footer in general (ignore div-under-div trickery for mobile)

--- a/assets/sass/layouts/_footer.scss
+++ b/assets/sass/layouts/_footer.scss
@@ -2,7 +2,9 @@ footer {
   	position: relative;
 	float: left;
 	margin: auto;
-  	margin-top: -60px;
+	@include MQ(M) {
+	 	margin-top: -60px;
+	}
 	padding: 0px;
 	width: 100%;
   	z-index: 1;
@@ -79,11 +81,18 @@ footer {
 		color: $bc-white;
 		background: $bc-blue;
         padding: 20px;
-	  	padding-top: 100px;
+	  	padding-top: 2em;
         h3 {
-          text-align: center;
-          font-size: 1.3em;
+          text-align: left;
+          font-size: 1.5em;
+		  font-weight: 700;
         }
+		@include MQ(M) {
+			padding-top: 100px;
+		  	h3 {
+			  	text-align: center;
+			}
+		}
 	}
 	.footer-promise {
 
